# AkademIQ-Reviewer

./: .gitignore  PLAN.md  README.md
backend/: PODCAST_FEATURE.md  README.md  debug_auth.py  debug_groq_api.py  migrate_documents.py  pyproject.toml  requirements.txt  test_existing.py  test_tts.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  documents.py
backend/app/core/: config.py  supabase_client.py
backend/app/schemas/: documents.py
backend/app/services/: ai_client.py  pdf_extractor.py  tts_client.py
backend/app/utils/: prompts.py
backend/database/: create_podcast_scripts_table.sql
frontend/: README.md  TTS_INTEGRATION.md  index.html  package-lock.json  package.json
frontend/src/: config.ts
frontend/src/components/: AuthPanel.tsx  ExplainPanel.tsx  FlashcardsPanel.tsx  FloatingTimer.tsx  PodcastPanel.tsx  QuizPanel.tsx  UploadPanel.tsx
frontend/src/pages/: ExplainPage.tsx  FlashcardsPage.tsx  HomePage.tsx  LandingPage.tsx  QuizPage.tsx  VoicePage.tsx
frontend/src/styles/: App.css  AuthPanel.css  ExplainPanel.css  FeaturePage.css  FlashcardsPanel.css  FloatingTimer.css  HomePage.css  LandingPage.css  PodcastPanel.css  QuizPanel.css  UploadPanel.css  base.css
frontend/src/ui/: App.tsx
